      Renamed to SConsEnvironmentError
    - Fix Issue #3350 - mslink failing when too many objects.  This is resolved by adding TEMPFILEARGJOIN variable
      which specifies what character to join all the argements output into the tempfile. The default remains a space
      when mslink, msvc, or mslib tools are loaded they change the TEMPFILEARGJOIN to be a line separator (\r\n on win32)

    From Michael Hartmann:
    - Fix handling of Visual Studio Compilers to properly reject any unknown HOST_PLATFORM or TARGET_PLATFORM


  From Mats Wichmann:
    - scons-time takes more care closing files and uses safer mkdtemp to avoid
      possible races on multi-job runs.
    - Use importlib to dynamically load tool and platform modules instead of imp module
    - sconsign: default to .sconsign.dblite if no filename is specified.
      Be more informative in case of unsupported pickle protocol (py2 only).
    - Fix issue #3336 - on Windows, paths were being added to PATH even if
      tools were not found in those paths.
    - More fixes for newer Java versions (since 9): handle new jdk directory
      naming (jdk-X.Y instead of jdkX.Y) on Windows; handle two-digit major
      version. Docstrings improved.
    - Fixups for pylint: exception types, redefined functions, 
      globals, etc.  Some old code removed to resolve issues (hashlib is
      always present on modern Pythons; no longer need the code for
      2.5-and-earlier optparse). cmp is not a builtin function in Py3,
      drop one (unused) use; replace one.  Fix another instance of
      renaming to SConsEnvironmentError. Trailing whitespace.
      Consistently use not is/in (if not x is y -> if x is not y).
    - Add a PY3-only function for setting up the cachedir that should be less
      prone to races. Add a hack to the PY2 version (from Issue #3351) to
      be less prone to a race in the check for old-style cache.
    - Fix coding error in docbook tool only exercised when using python lxml 