@@ -41,6 +41,14 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Fix Issue #3350 - mslink failing when too many objects.  This is resolved by adding TEMPFILEARGJOIN variable
       which specifies what character to join all the argements output into the tempfile. The default remains a space
       when mslink, msvc, or mslib tools are loaded they change the TEMPFILEARGJOIN to be a line separator (\r\n on win32)
+    - Fix performance degradation for MD5-timestamp decider.  NOTE: This changes the Decider() function arguments.
+      From:
+          def my_decider(dependency, target, prev_ni):
+      To:
+          def my_decider(dependency, target, prev_ni, repo_node):
+      Where repo_node is the repository (or other) node to use to check if the node is out of date instead of dependency.
+
+
 
     From Michael Hartmann:
     - Fix handling of Visual Studio Compilers to properly reject any unknown HOST_PLATFORM or TARGET_PLATFORM
